# streamtree

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  reusable-cli-smoke.yml  reusable-docs-and-dist.yml  reusable-lint-test.yml
docs/: DEPENDENCY_STRATEGY.md  EXAMPLES.md  PERFORMANCE.md  PHASE2_FORMS.md  PHASE2_PORTALS_AND_PREFETCH.md  PHASE2_TAIL.md  PHASE3_CRUD.md  PLAN.md  ROADMAP.md  STREAMTREE_DEPENDENCY_STRATEGY.md  STREAMTREE_PLAN.md  STREAMTREE_ROADMAP.md  TESTING_AND_DEBUG.md  getting-started.md  index.md
docs/recipes/: README.md  app-theme-context.md  async-and-loading.md  authentication-gate.md  cli-and-scaffolding.md  crud-list-detail-save.md  data-grids-and-charts.md  first-app-and-components.md  forms-and-validation.md  layout-shells.md  multipage-navigation.md  observability-and-ops.md  organizing-large-apps.md  portals-and-deferred.md  routing-and-urls.md  state-session-and-memo.md  streamlit-interop.md
docs/reference/: apptest_api.md  asyncio_api.md  cli_helpers.md  core_api.md  introspection_api.md  testing_api.md
docs/stylesheets/: extra.css
examples/: __init__.py  altair_chart_demo.py  app_shell.py  async_bg.py  async_loader_demo.py  async_ordered_loader_demo.py  auth_demo.py  chart_demo.py  counter.py  crud_automation_demo.py  crud_pattern_demo.py  datagrid_demo.py  datagrid_selection_demo.py  deferred_region_demo.py  echarts_demo.py  model_form.py  numeric_nav_demo.py  overlay_demo.py  pages_helpers_demo.py  phase2_composite_demo.py  phase2_layout_demo.py  routed_app.py  streamtree_run_demo.md
examples/pages/: 1_About_demo.py
src/streamtree/: __init__.py  app.py  app_context.py  auth.py  charts.py  cli.py  crud.py  echarts_chart.py  enterprise.py  forms.py  forms_layout.py  loading.py  perf.py  portals.py  routing.py  tables.py  theme.py
src/streamtree/asyncio/: __init__.py
src/streamtree/core/: __init__.py  component.py  context.py  element.py
src/streamtree/elements/: __init__.py  auth_gate.py  layout.py  ui_extra.py  widgets.py
src/streamtree/helpers/: __init__.py  explore.py  pages.py  runner.py  scaffold.py  tree_target.py
src/streamtree/renderers/: __init__.py  streamlit.py
src/streamtree/state/: __init__.py
src/streamtree/testing/: __init__.py  apptest.py  introspection.py  viz.py
tests/: test_app.py  test_app_context.py  test_apptest_helper.py  test_asyncio_pkg.py  test_asyncio_summarize.py  test_auth.py  test_cli.py  test_component_and_testing.py  test_context.py  test_crud_enterprise_perf.py  test_element.py  test_examples_run.py  test_explore_helpers.py  test_forms.py  test_forms_builder.py  test_forms_layout.py  test_forms_numeric.py  test_helpers_pages.py  test_helpers_runner.py  test_helpers_scaffold.py  test_helpers_scaffold_pages_exists.py  test_helpers_tree_target.py  test_introspection.py  test_layout_portals.py  test_layout_routes.py  test_loading.py  test_package_meta.py  test_portals.py  test_render_streamlit_mocked.py  test_routing.py  test_state.py  test_streamlit_app.py  test_tables_charts.py  test_testing_all_nodes.py  test_theme.py  test_tree.py  test_tree_viz.py  test_ui_extra.py
