[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamtree"
version = "0.3.0"
description = "StreamTree: declarative, typed composition for Streamlit."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "StreamTree contributors" }]
keywords = ["streamlit", "ui", "components", "declarative"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.4.0",
  "streamlit>=1.28.0",
  "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
# Stub extras (see docs/DEPENDENCY_STRATEGY.md); wrappers ship in later releases.
tables = []
charts = []
ui = []
auth = []
asyncio = []
cli = []
# Combined: pip install "streamtree[tables,charts,ui,auth,asyncio,cli]" (meta-extra omitted; names like "cli" are PyPI packages in lists).
all = []
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.5.0",
  "mypy>=1.8.0",
  "ruff>=0.2.0",
  "ty>=0.0.30",
]

[project.urls]
Homepage = "https://github.com/streamtree-dev/streamtree"
Documentation = "https://github.com/streamtree-dev/streamtree#readme"
Repository = "https://github.com/streamtree-dev/streamtree"
Issues = "https://github.com/streamtree-dev/streamtree/issues"
Changelog = "https://github.com/streamtree-dev/streamtree/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["streamtree"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--import-mode=importlib",
  # Path (not package name) so the tree is not imported before cov attaches (avoids
  # CoverageWarning: module streamtree was previously imported, but not measured).
  "--cov=src/streamtree",
  "--cov-report=term-missing:skip-covered",
  "--cov-fail-under=100",
]
filterwarnings = [
  "ignore:.*async fixture 'ensure_greenlet_context'.*:pytest.PytestRemovedIn9Warning",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]
