[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamtree"
version = "0.10.0"
description = "StreamTree: declarative, typed composition for Streamlit."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "StreamTree contributors" }]
keywords = ["streamlit", "ui", "components", "declarative"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.4.0",
  "streamlit>=1.33.0",
  "typing-extensions>=4.8.0",
]

[project.scripts]
streamtree = "streamtree.cli:main"

[project.optional-dependencies]
# Optional extras (see docs/DEPENDENCY_STRATEGY.md).
tables = ["streamlit-aggrid>=0.3.0", "pandas>=2.0.0"]
charts = ["plotly>=5.18.0", "altair>=5.0.0"]
ui = ["streamlit-extras>=0.4.3"]
auth = ["streamlit-authenticator>=0.3.3"]
asyncio = []
# TOML-quoted key: matches documented ``pip install streamtree[async]`` (alias of the asyncio stub extra).
"async" = []
# Typer powers ``streamtree run`` / ``streamtree doctor``; keep default ``pip install streamtree`` lean.
cli = ["typer>=0.12.3"]
# Reserved for future pinned multipage deps; ``streamtree.helpers.pages`` ships in the default install (0.5+).
pages = []
# Stdlib ``streamtree.helpers.runner`` ships in the default install; this extra is metadata-only for now.
runner = []
# Combined: pip install "streamtree[tables,charts,ui,auth,asyncio,async,cli]" (meta-extra omitted; names like "cli" are PyPI packages in lists).
all = [
  "streamlit-aggrid>=0.3.0",
  "pandas>=2.0.0",
  "plotly>=5.18.0",
  "altair>=5.0.0",
  "streamlit-extras>=0.4.3",
  "streamlit-authenticator>=0.3.3",
  "typer>=0.12.3",
]
dev = [
  "mkdocs>=1.6.0",
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.5.0",
  "mypy>=1.8.0",
  "ruff>=0.2.0",
  "ty>=0.0.30",
  "typer>=0.12.3",
  "streamlit-authenticator>=0.3.3",
  "streamlit-extras>=0.4.3",
  "streamlit-aggrid>=0.3.0",
  "pandas>=2.0.0",
  "plotly>=5.18.0",
  "altair>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/streamtree-dev/streamtree"
Documentation = "https://github.com/streamtree-dev/streamtree#readme"
Repository = "https://github.com/streamtree-dev/streamtree"
Issues = "https://github.com/streamtree-dev/streamtree/issues"
Changelog = "https://github.com/streamtree-dev/streamtree/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"src/streamtree/cli.py" = ["B008"]

[tool.mypy]
# CI uses ``ty check src`` (``.github/workflows/ci.yml``). mypy remains configured for optional local runs.
python_version = "3.10"
strict = true
packages = ["streamtree"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--import-mode=importlib",
  # Path (not package name) so the tree is not imported before cov attaches (avoids
  # CoverageWarning: module streamtree was previously imported, but not measured).
  "--cov=src/streamtree",
  "--cov-report=term-missing:skip-covered",
  "--cov-fail-under=100",
]
filterwarnings = [
  "ignore:.*ensure_greenlet.*:pytest.PytestRemovedIn9Warning",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]
